# pico_rust_nonsense

./: .gitignore  LICENSE
artic_demo/: Cargo.toml  README.md
artic_demo/src/: glob_log.rs  lib.rs
artic_demo/testsuite/: Cargo.toml
artic_demo/testsuite/src/: lib.rs
artic_demo/testsuite/tests/: test.rs
common_protocols/: Cargo.toml  README.md
common_protocols/src/: add_protocol.rs  base_protocol.rs  lib.rs  opcode_protocol.rs
defmt_printer_based_api/: Cargo.toml  README.md
defmt_printer_based_api/examples/: printer.rs
defmt_printer_based_api/src/: lib.rs
leftovers/: dynamic_reader.rs
printer/: Cargo.toml
printer/src/: base_protocol_handler.rs  main.rs  port_reader.rs  ser_port.rs
