[package]
name = "printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
serialport = "4.2.0"
libudev = { version = "0.3.0", optional = true }
termios = "0.3.3"
defmt-decoder = { version = "0.3.4", features = ["unstable"] }
log = "0.4"
common_protocols = { path = "../common_protocols" }
defmt_printer_based_api = { path = "../defmt_printer_based_api", features = ["unstable"] }
anyhow = "1.0.69"

[features]
default = ["libudev"]